--- a/vues/user/v_formConnection.html
+++ b/vues/user/v_formConnection.html
@@ -1,7 +1,18 @@
-<form class="pure-form" method="post" action="index.php?uc=user&action=toConnnect">
-    <fieldset>
-        <input type="text" name ="identifiant" placeholder="Identifiant"/>
-        <input type="password" name ="motDePasse" placeholder="Mot de passe"/>
-        <button type="submit" class="pure-button pure-button-primary">Connexion</button>
-    </fieldset>
+<form method="post" action="index.php?uc=user&action=toConnnect">
+    <br>
+      <div class="row">
+        <div class="medium-3 columns">
+            <input type="text" name ="identifiant" placeholder="Identifiant"/>
+          </div>
+          <div class="medium-3 columns">
+            <input type="password" name ="motDePasse" placeholder="Mot de passe"/>
+          </div>
+          <div class="medium-3 columns">
+              <button type="submit" class="pure-button pure-button-primary">Connexion</button>
+          </div>
+          <div class="medium-3 columns">
+
+          </div>
+        </div>
+      </div>
 </form>
