Aperçu CV + Modification CV

--- a/vues/user/v_index.html
+++ b/vues/user/v_index.html
@@ -6,12 +6,7 @@
 
         <div class="row">
           <div class="medium-3 columns"> </div>
-          <div class="medium-3 columns">
-            <p id="test"><span class="span6">Nos membres :</span>
-              <br><a href="index.php?uc=user&action=index"
-                class="success button">Utilisateurs inscrits
-              </a>
-            </p>
+          <div class="medium-3 columns"> <br> <br>
           </div>
         </div>
 
