Page modification + Erreur suppression à résoudre

--- a/vues/cv/view.html
+++ b/vues/cv/view.html
@@ -1,3 +1,4 @@
+
 <div class="">
   <div class="">
     <br>
@@ -103,6 +104,11 @@
                   </tbody>
                 </table>
                 </div>
+                  <div class="medium-12 columns">
+                    <br> <form method="post" action="index.php?uc=cv&action=modifCV">
+                            <button type="submit" class="success button">Modifier mes informations</button>
+                          </form>
+                  </div>
             </div>
 
             <div class="medium-12 columns contenuCV" >
