Modification + Suppresion OK

--- a/vues/cv/formModification.html
+++ b/vues/cv/formModification.html
@@ -1,92 +1,91 @@
 <div class="">
   <div class="">
     <br>
+      <div class="row">
+        <br><br>
+        <div class="medium-12 columns monCV"> <h4> MODIFICATION DE VOTRE CV </h4> </div>
 
-        <div class="row">
-          <br><br>
+        <div class="medium-12 columns contenuCV" >
+          <nav>
+            <ul>
+              <li class="experience">Expériences</li>
+              <li class="competence">Compétences</li>
+              <li class="formation">Formations</li>
+              <li class="contact">Contact</li>
+            </ul>
+          </nav>
+        </div>
 
-            <div class="medium-12 columns monCV">
-                <h4> MODIFICATION DE VOTRE CV </h4>
-            </div>
+        <div class="medium-12 columns contenuCV" >
 
-            <div class="medium-12 columns contenuCV" >
-              <nav>
-                <ul>
-                  <li class="experience">Expériences</li>
-                  <li class="competence">Compétences</li>
-                  <li class="formation">Formations</li>
-                  <li class="contact">Contact</li>
-                </ul>
-              </nav>
-            </div>
+          <div id="experienceContenu">
+            <?php foreach ($listAllExperience as $key => $cv): ?>
+              <form method="post" action="index.php?uc=cv&action=modifExperience">
+                <div class="medium-2 columns infoModifCV"> Intutilé </div>
+                  <div class="medium-10 columns"> <input type="text" name="intitule" value="<?php echo $cv['intitule']; ?>"> </div>
+                  <div class="medium-2 columns infoModifCV"> Date de début </div>
+                  <div class="medium-10 columns"> <input type="text" name="date_debut" value="<?php echo $cv['date_debut']; ?>"> </div>
+                  <div class="medium-2 columns infoModifCV"> Date de fin </div>
+                  <div class="medium-10 columns"> <input type="text" name="date_fin" value="<?php echo $cv['date_fin']; ?>"> </div>
+                  <div class="medium-2 columns infoModifCV"> Description </div>
+                  <div class="medium-10 columns"> <input type="text" name="description" value="<?php echo $cv['description']; ?>"> </div>
+                  <div class="medium-2 columns infoModifCV"> ID </div>
+                  <div class="medium-10 columns"> <input type="text" name="id_experience" value="<?php echo $cv['id_experience']; ?>"> </div>
 
-            <div class="medium-12 columns contenuCV" >
+                  <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
+                  <div class="medium-6 columns" > <button type="submit" class="success button" name="modification"> Modification terminée </button> </div>
+                  <hr>
+              </form>
+            <?php endforeach; ?>
+          </div>
 
-                <div id="experienceContenu">
-                    <?php foreach ($listAllExperience as $key => $cv): ?>
-                      <form method="post" action="index.php?uc=cv&action=modifExperience">
-                        <!--<form id="exp" method="post" action="index.php?uc=cv&action=deleteExperience">-->
-                        <div class="medium-2 columns infoModifCV"> Intutilé </div>
-                        <div class="medium-10 columns"> <input type="text" name="intitule" value="<?php echo $cv['intitule']; ?>"> </div>
-                        <div class="medium-2 columns infoModifCV"> Date de début </div>
-                        <div class="medium-10 columns"> <input type="text" name="date_debut" value="<?php echo $cv['date_debut']; ?>"> </div>
-                        <div class="medium-2 columns infoModifCV"> Date de fin </div>
-                        <div class="medium-10 columns"> <input type="text" name="date_fin" value="<?php echo $cv['date_fin']; ?>"> </div>
-                        <div class="medium-2 columns infoModifCV"> Description </div>
-                        <div class="medium-10 columns"> <input type="text" name="description" value="<?php echo $cv['description']; ?>"> </div>
-                        <div class="medium-2 columns infoModifCV"> ID </div>
-                        <div class="medium-10 columns"> <input type="text" name="id_experience" value="<?php echo $cv['id_experience']; ?>"> </div>
+          <div id="competenceContenu">
+            <?php foreach ($listAllCompetences as $key => $cv): ?>
+              <form id="comp" method="post" action="index.php?uc=cv&action=modifCompetence">
+                <div class="medium-6 columns"> <input type="text" name="competence" value="<?php echo $cv['competence']; ?>"> </div>
+                <div class="medium-6 columns"> <input type="text" name="id_competence" value="<?php echo $cv['id_competence']; ?>"> </div>
 
-                        <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
-                        <div class="medium-6 columns" > <button type="submit" class="success button" name="modification"> Modification terminée </button> </div>
-                        <hr>
-                      </form>
-                    <?php endforeach; ?>
-                  <!--  </form>-->
-                </div>
+                <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
+                <div class="medium-6 columns" > <button type="submit" class="success button" name="modification">Modification terminée</button> </div>
+                <hr>
+              </form>
+            <?php endforeach; ?>
+          </div>
 
-                <div id="competenceContenu">
-                  <?php foreach ($listAllCompetences as $key => $cv): ?>
-                  <form id="comp" method="post">
-                    <div class="medium-10 columns"> <input type="text" name="competence" value="<?php echo $cv['competence']; ?>"> </div>
-                    <div class="medium-2 columns"> <button type="submit" class="warning button" id="boutonPlus"> Supprimer </button>
-                    </div>
-                  <?php endforeach; ?>
-                  <form method="post" action="index.php?uc=cv&action=modifCompetence">
-                      <div class="medium-12 columns" > <button type="submit" class="success button">Modification terminée</button> </div>
-                  </form>
-                </div>
+          <div id="formationContenu">
+            <?php foreach ($listAllFormations as $key => $cv): ?>
+              <form id="form" method="post" action="index.php?uc=cv&action=modifFormation">
+                <div class="medium-2 columns infoModifCV"> Intutilé </div>
+                <div class="medium-10 columns"> <input type="text" name="intitule" value="<?php echo $cv['intitule']; ?>"> </div>
+                <div class="medium-2 columns infoModifCV"> Date de début </div>
+                <div class="medium-10 columns"> <input type="text" name="date_debut" value="<?php echo $cv['date_debut']; ?>"> </div>
+                <div class="medium-2 columns infoModifCV"> Date de fin </div>
+                <div class="medium-10 columns"> <input type="text" name="date_fin" value="<?php echo $cv['date_fin']; ?>"> </div>
+                <div class="medium-2 columns infoModifCV"> Description </div>
+                <div class="medium-10 columns"> <input type="text" name="description" value="<?php echo $cv['description']; ?>"> </div>
+                <div class="medium-2 columns infoModifCV"> ID </div>
+                <div class="medium-10 columns"> <input type="text" name="id_formation" value="<?php echo $cv['id_formation']; ?>"> </div>
 
-                <div id="formationContenu">
-                  <?php foreach ($listAllFormations as $key => $cv): ?>
-                    <form id="form" method="post">
-                      <div class="medium-2 columns infoModifCV"> Intutilé </div>
-                      <div class="medium-10 columns"> <input type="text" name="nom" value="<?php echo $cv['intitule']; ?>"> </div>
-                      <div class="medium-2 columns infoModifCV"> Date de début </div>
-                      <div class="medium-10 columns"> <input type="text" name="date_debut" value="<?php echo $cv['date_debut']; ?>"> </div>
-                      <div class="medium-2 columns infoModifCV"> Date de fin </div>
-                      <div class="medium-10 columns"> <input type="text" name="date_fin" value="<?php echo $cv['date_fin']; ?>"> </div>
-                      <div class="medium-2 columns infoModifCV"> Description </div>
-                      <div class="medium-10 columns"> <input type="text" name="description" value="<?php echo $cv['description']; ?>"> </div>
+                <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
+                <div class="medium-6 columns" > <button type="submit" class="success button" name="modification">Modification terminée</button> </div>
+                <hr>
+              </form>
+            <?php endforeach; ?>
+          </div>
 
-                      <div class="medium-12 columns"> <button type="submit" class="warning button" id="boutonPlus"> Supprimer </button>
-                      <hr></div>
-                      </form>
-                    <?php endforeach; ?>
-                    <form method="post" action="index.php?uc=cv&action=modifFormation">
-                        <div class="medium-12 columns" > <button type="submit" class="success button">Modification terminée</button> </div>
-                    </form>
-                  </div>
+          <div id="contactContenu">
+            <?php foreach ($listAllContact as $key => $cv): ?>
+              <form id="form" method="post" action="index.php?uc=cv&action=modifContact">
+                <div class="medium-6 columns"> <input type="text" name="contact" value="<?php echo $cv['contact']; ?>"> </div>
+                <div class="medium-6 columns"> <input type="text" name="id_contact" value="<?php echo $cv['id_contact']; ?>"> </div>
 
-                  <div id="contactContenu">
-                    <?php foreach ($listAllContact as $key => $cv): ?>
-                      <form id="form" method="post" action="index.php?uc=cv&action=modifContact">
-                        <div class="medium-6 columns"> <input type="text" name="contact" value="<?php echo $cv['contact']; ?>"> </div>
-                        <div class="medium-6 columns"> <input type="text" name="id_contact" value="<?php echo $cv['id_contact']; ?>"> </div>
-
-                        <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
-                        <div class="medium-6 columns" > <button type="submit" class="success button" name="modification">Modification terminée</button> </div>
-                        <hr>
-                      </form>
-                    <?php endforeach; ?>
-                  </div>
+                <div class="medium-6 columns"> <button type="submit" class="warning button" name="suppression" id="boutonPlus"> Supprimer </button> </div>
+                <div class="medium-6 columns" > <button type="submit" class="success button" name="modification">Modification terminée</button> </div>
+                <hr>
+              </form>
+            <?php endforeach; ?>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
