--- a/vues/user/v_index.html
+++ b/vues/user/v_index.html
@@ -10,7 +10,7 @@
           </div>
         </div>
 
-    <h4> * Liste des étudiants inscrits </h4>
+    <h4> > Liste des étudiants inscrits </h4>
     <table class="table">
     <thead>
       <tr>
