--- a/vues/cv/listeCV_user.html
+++ b/vues/cv/listeCV_user.html
@@ -1,27 +1,8 @@
-<?php
-if(file_exists('compteur_visites.txt'))
-{
-        $compteur_f = fopen('compteur_visites.txt', 'r+');
-        $compte = fgets($compteur_f);
-}
-else
-{
-        $compteur_f = fopen('compteur_visites.txt', 'a+');
-        $compte = 0;
-}
-if(!isset($_SESSION['compteur_de_visite']))
-{
-        $_SESSION['compteur_de_visite'] = 'visite';
-        $compte++;
-        fseek($compteur_f, 0);
-        fputs($compteur_f, $compte);
-}
-fclose($compteur_f); ?>
+
+
 <number id="">
-<?php echo '<strong>'.$compte.'</strong> visites'; ?>
+<?php echo '<strong>'.$count.'</strong> visites'; ?>
 </number>
-
-
 
 <div class="row">
   <br><br>
