--- a/vues/cv/view.html
+++ b/vues/cv/view.html
@@ -106,8 +106,11 @@
                 </div>
                   <div class="medium-12 columns">
                     <br> <form method="post" action="index.php?uc=cv&action=modifCV">
+                            <input type="radio" name="visible" value="1" checked="checked" /> CV public
+                            <input type="radio" name="visible" value="0" /> CV privé <br>
                             <button type="submit" class="success button">Modifier mes informations</button>
-                          </form>
+                  </div>
+                        </form>
                   </div>
             </div>
 
